--- a/themes/twotwothree/layouts/partials/footer.html
+++ b/themes/twotwothree/layouts/partials/footer.html
@@ -1,6 +1,6 @@
 <footer>
 		<hr> 
-		<p>"On the Internet, nobody knows you're a dog." - <em>Peter Steiner</em></p>
+		<p>Last edit {{dateFormat "Jan 2, 2006" .GitInfo.AuthorDate}} by {{.GitInfo.AuthorName}} <small>({{.GitInfo.AbbreviatedHash}}, "{{.GitInfo.Subject}}")</small>.</p>
 		<p>This site was made with <a href="https://github.com/gohugoio/hugo">Hugo</a> using theme <a href="https://github.com/schollz/onetwothree">onetwothree</a> made by <a href="https://github.com/schollz">schollz</a>.</p>
 	</footer>
 </body>
