--- a/themes/twotwothree/layouts/partials/sidebar.html
+++ b/themes/twotwothree/layouts/partials/sidebar.html
@@ -1,29 +1,33 @@
 <div class="sidebar">
     <div class="readme">
         <div class="wikitext">
-            
             <p>
                 <a href="/">Full index of entries</a>
             </p>
             <p>
-                Subjects: <a href="/tags/science">science</a>, <a href="/tags/painting">painting</a>, <a href="/tags/coding">coding</a>,
-                <a href="/tags/food">food</a>, <a href="/tags/thoughts">thoughts</a>
+                Subjects: {{ range $taxonomyname, $taxonomy := .Site.Taxonomies.tags }}
+                <a href="/tags/{{ $taxonomyname }}">{{ $taxonomyname }}</a>&nbsp; {{end}}
             </p>
+            {{ with .Site.Params.github }}
             <p>Github:
-                <a href="https://github.com/schollz/">@schollz</a>
+                <a href="https://github.com/{{.}}">@{{.}}</a>
             </p>
+            {{end}} {{ with .Site.Params.twitter }}
             <p>Twitter:
-                <a href="https://twitter.com/yakczar/">@yakczar</a>
+                <a href="https://twitter.com/{{.}}">@{{.}}</a>
             </p>
+            {{end}}
             <p align="center">* * *</p>
             <div class="sidesearch" style="font-size: small">
                 <form onsubmit="location.href='/search/?s=' + document.getElementById('myInput').value; return false;">
-                    Search: <input type="text" id="myInput"  size=15 />
+                    Search:
+                    <input type="text" id="myInput" size=15 />
                 </form>
             </div>
             <p>
-                    <a href="/index.xml">RSS feed</a>
-                </p>
+                {{ range .Site.Params.navigation}}
+                <a href="/{{.}}">{{. | title }}</a>&nbsp;&middot;&nbsp;{{end}}<a href="/index.xml">RSS feed</a>
+            </p>
         </div>
     </div>
 </div>
