--- a/themes/twotwothree/layouts/_default/single.html
+++ b/themes/twotwothree/layouts/_default/single.html
@@ -65,7 +65,7 @@ window.onload = ready;
             </div>
             <br>
 
-  
+{{ if .Site.Params.commentServer}}
 <!-- Start of guestbook -->
 
 <div class="collapse" tabindex="1">
@@ -120,7 +120,7 @@ window.onload = ready;
             <!-- End of Guestbook form -->
     
         <script>
-            var serverURL = "https://guestbook.schollz.com"
+            var serverURL = "{{.Site.Params.commentServer}}"
             var btn = document.getElementById("btn");
             var guestbook = document.getElementById("comments");
             var firstMessage = 0;
@@ -165,6 +165,7 @@ window.onload = ready;
     <br>
 </div>
     <!-- END OF COMMENTS -->
+    {{end}}
 
             <small>Written on <a href="/written/{{ .Date.Format "2006-01-02" | lower}}">{{ .Date.Format "2"}}</a> 
                 <a href="/written/{{ .Date.Format "2006-01" | lower}}">{{ .Date.Format "January"}}</a>
