--- a/themes/twotwothree/layouts/_default/single.html
+++ b/themes/twotwothree/layouts/_default/single.html
@@ -1,27 +1,26 @@
 {{ partial "header.html" . }}
-
-
 <div id="loadingMask" style="width: 100%; height: 100%; position: fixed; background: #fff;"></div>
 <script>
 function fadeOut(el) {
-  el.style.opacity = 1;
-  var last = +new Date();
-  var tick = function() {
-    el.style.opacity = +el.style.opacity - (new Date() - last) / 80;
-    last = +new Date();
-    // console.log(el.style.opacity);
-    if (el.style.opacity > 0) {
-      (window.requestAnimationFrame && requestAnimationFrame(tick)) || setTimeout(tick, 16);
-    } else {
-        el.style.display='none';
-    }
-  };
-  tick();
+    el.style.opacity = 1;
+    var last = +new Date();
+    var tick = function() {
+        el.style.opacity = +el.style.opacity - (new Date() - last) / 80;
+        last = +new Date();
+        // console.log(el.style.opacity);
+        if (el.style.opacity > 0) {
+            (window.requestAnimationFrame && requestAnimationFrame(tick)) || setTimeout(tick, 16);
+        } else {
+            el.style.display = 'none';
+        }
+    };
+    tick();
 }
+
 function ready(fn) {
     if (document.attachEvent ? document.readyState === "complete" : document.readyState !== "loading") {
-         el = document.getElementById('loadingMask');
-         fadeOut(el);
+        el = document.getElementById('loadingMask');
+        fadeOut(el);
         var elements = document.querySelectorAll("img");
         Array.prototype.forEach.call(elements, function(el, i) {
             if (el.getAttribute("alt")) {
@@ -40,17 +39,16 @@ function ready(fn) {
         document.addEventListener('DOMContentLoaded', fn);
     }
 
-      guestbook.innerHTML = "Loading ...";
-  var tag = document.createElement("script");
-  var message = encodeURIComponent(document.querySelector('#message').value);
-  var name = encodeURIComponent(document.querySelector('#name').value);
-  var email = encodeURIComponent(document.querySelector('#email').value);
-  tag.src = `${serverURL}/jsonp?callback=myCallback&message=${message}&name=${name}&email=${name}`;
-  document.querySelector("head").appendChild(tag);
+    guestbook.innerHTML = "Loading ...";
+    var tag = document.createElement("script");
+    var message = encodeURIComponent(document.querySelector('#message').value);
+    var name = encodeURIComponent(document.querySelector('#name').value);
+    var email = encodeURIComponent(document.querySelector('#email').value);
+    tag.src = `${serverURL}/jsonp?callback=myCallback&message=${message}&name=${name}&email=${name}`;
+    document.querySelector("head").appendChild(tag);
 }
 window.onload = ready;
 </script>
-
 <div id="documentbody">
     <div class="wtblog">
         <div class="maintext">
@@ -63,110 +61,103 @@ window.onload = ready;
             <div class="wikitext">
                 {{ .Content }}
             </div>
-            <br>
-
-{{ if .Site.Params.commentServer}}
-<!-- Start of guestbook -->
-
-<div class="collapse" tabindex="1">
-        <a id="commenttoggle" href="#commentssection" onclick="toggle_visibility('commentssection');">Show comments <span id="commentsnum"></span></a>
-        <script type="text/javascript">
-            <!--
+            <br> {{ if .Site.Params.commentServer}}
+            <!-- Start of guestbook -->
+            <div class="collapse" tabindex="1">
+                <a id="commenttoggle" href="#commentssection" onclick="toggle_visibility('commentssection');">Show comments <span id="commentsnum"></span></a>
+                <script type="text/javascript">
+                <!--
                 function toggle_visibility(id) {
-                   var e = document.getElementById(id);
-                   if(e.style.display == 'block') {
-                    e.style.display = 'none';
-                      document.getElementById("commenttoggle").innerText = "Show comments";
-                   }  else       {
-                    e.style.display = 'block';
-                    document.getElementById("commenttoggle").innerText = "Hide comments";
-                   }
+                    var e = document.getElementById(id);
+                    if (e.style.display == 'block') {
+                        e.style.display = 'none';
+                        document.getElementById("commenttoggle").innerText = "Show comments";
+                    } else {
+                        e.style.display = 'block';
+                        document.getElementById("commenttoggle").innerText = "Hide comments";
+                    }
                 }
-            //-->
-            </script>
-<div id="commentssection" style="display:none;">
-        <hr>
+                //-->
+                </script>
+                <div id="commentssection" style="display:none;">
+                    <hr>
+                    <div id="comments">
+                    </div>
+                    <!-- Guestbook form -->
+                    <div class="guestbook-form">
+                        <strong>Leave a comment:</strong>
+                        <textarea rows='5' cols='75' id="message" name="message" class="guestbook"></textarea>
+                        <br>
+                        <table style="margin-bottom:0">
+                            <tr>
+                                <td style="padding-right: 10px">
+                                    <label for="name">Who are you?</label>
+                                </td>
+                                <td>
+                                    <input id="name" class="guestbook" type="text" size=40 type="text" value=""> </td>
+                            </tr>
+                            <tr>
+                                <td style="padding-right: 10px">
+                                    <label for="whourl">(optional URL)</label>
+                                </td>
+                                <td>
+                                    <input id="email" class="guestbook" size=40 type="url" value=""> </td>
+                            </tr>
+                            <tr>
+                                <td>
+                                    <input class="guestbook-button" type="button" id="btn" value="Submit">
+                                </td>
+                            </tr>
+                        </table>
+                    </div>
+                    <!-- End of Guestbook form -->
+                    <script>
+                    var serverURL = "{{.Site.Params.commentServer}}"
+                    var btn = document.getElementById("btn");
+                    var guestbook = document.getElementById("comments");
+                    var firstMessage = 0;
 
-        <div id="comments">
-        </div>
+                    function myCallback(acptlang) {
+                        // console.log(firstMessage);
+                        // console.log((acptlang.Message != "" && firstMessage == 1));
+                        if (acptlang.Message != "" && firstMessage == 1) {
+                            alert(acptlang.Message);
+                            firstMessage = 1;
+                        }
 
-         <!-- Guestbook form -->
-         <div class="guestbook-form">
-            <strong>Leave a comment:</strong>
-            <textarea rows='5' cols='75' id="message" name="message" class="guestbook"></textarea>
-            <br>
-            <table style="margin-bottom:0">
-                <tr>
-                    <td style="padding-right: 10px">
-                        <label for="name">Who are you?</label>
-                    </td>
-                    <td>
-                        <input id="name" class="guestbook" type="text" size=40 type="text" value=""> </td>
-                </tr>
-                <tr>
-                    <td style="padding-right: 10px">
-                        <label for="whourl">(optional URL)</label>
-                    </td>
-                    <td>
-                        <input id="email" class="guestbook" size=40 type="url" value=""> </td>
-                </tr>
-                <tr>
-                    <td>
-                        <input class="guestbook-button" type="button" id="btn" value="Submit">
-                    </td>
-                </tr>
-            </table>
-        </div>
-            <!-- End of Guestbook form -->
-    
-        <script>
-            var serverURL = "{{.Site.Params.commentServer}}"
-            var btn = document.getElementById("btn");
-            var guestbook = document.getElementById("comments");
-            var firstMessage = 0;
-    
-            function myCallback(acptlang) {
-                // console.log(firstMessage);
-                // console.log((acptlang.Message != "" && firstMessage == 1));
-                if (acptlang.Message != "" && firstMessage == 1) {
-                    alert(acptlang.Message);
-                    firstMessage = 1;
-                }
-    
-                // console.log(acptlang);
-                guestbook.innerHTML = "";
-                // console.log(acptlang.Entries.length);
-                if (acptlang.Entries.length > 0) {
-                    var commentsNum = document.getElementById("commentsnum");
-                    commentsNum.innerText = "(" + acptlang.Entries.length + ")"
-                }
-                for (var i = 0; i < acptlang.Entries.length; i++) {
-                    guestbook.innerHTML = guestbook.innerHTML +
-                        `<div class="comment">
+                        // console.log(acptlang);
+                        guestbook.innerHTML = "";
+                        // console.log(acptlang.Entries.length);
+                        if (acptlang.Entries.length > 0) {
+                            var commentsNum = document.getElementById("commentsnum");
+                            commentsNum.innerText = "(" + acptlang.Entries.length + ")"
+                        }
+                        for (var i = 0; i < acptlang.Entries.length; i++) {
+                            guestbook.innerHTML = guestbook.innerHTML +
+                                `<div class="comment">
     <div class="entryid"> By ${acptlang.Entries[i].Name} on ${acptlang.Entries[i].DateString} in ${acptlang.Entries[i].Location}: </div>
     <blockquote> <div class="wikitext">${acptlang.Entries[i].Message}
     </div> </blockquote> </div>`
-    
-                }
-            }
-    
-            function jsonp() {
-                guestbook.innerHTML = "Loading ...";
-                var tag = document.createElement("script");
-                var message = encodeURIComponent(document.querySelector('#message').value);
-                var name = encodeURIComponent(document.querySelector('#name').value);
-                var email = encodeURIComponent(document.querySelector('#email').value);
-                tag.src = `${serverURL}/jsonp?callback=myCallback&message=${message}&name=${name}&email=${name}`;
-                document.querySelector("head").appendChild(tag);
-            }
-            btn.addEventListener("click", jsonp);
-        </script>
-    </div>
-    <br>
-</div>
-    <!-- END OF COMMENTS -->
-    {{end}}
 
+                        }
+                    }
+
+                    function jsonp() {
+                        guestbook.innerHTML = "Loading ...";
+                        var tag = document.createElement("script");
+                        var message = encodeURIComponent(document.querySelector('#message').value);
+                        var name = encodeURIComponent(document.querySelector('#name').value);
+                        var email = encodeURIComponent(document.querySelector('#email').value);
+                        tag.src = `${serverURL}/jsonp?callback=myCallback&message=${message}&name=${name}&email=${name}`;
+                        document.querySelector("head").appendChild(tag);
+                    }
+                    btn.addEventListener("click", jsonp);
+                    </script>
+                </div>
+                <br>
+            </div>
+            <!-- END OF COMMENTS -->
+            {{end}} {{ if .Type | eq "post" }}
             <small>Written on <a href="/written/{{ .Date.Format "2006-01-02" | lower}}">{{ .Date.Format "2"}}</a> 
                 <a href="/written/{{ .Date.Format "2006-01" | lower}}">{{ .Date.Format "January"}}</a>
                 <a href="/written/{{ .Date.Format "2006" | lower}}">{{ .Date.Format "2006"}}</a>.
@@ -174,11 +165,15 @@ window.onload = ready;
             Categories:
                 {{ range $i, $e := .Params.Tags }}{{ if $i }}, {{ end }}<a href="/tags/{{$e}}/">{{ $e }}</a>{{ end }}.
             {{ end }}
-            </small> 
-
-
-<br>
-                <br>
+            </small> {{ else }}
+            <small>Written on {{ .Date.Format "2"}} {{ .Date.Format "January"}} {{ .Date.Format "2006"}}.
+            {{ if .Params.Tags}}
+            Categories:
+                {{ range $i, $e := .Params.Tags }}{{ if $i }}, {{ end }}<a href="/tags/{{$e}}/">{{ $e }}</a>{{ end }}.
+            {{ end }}
+            </small> {{end}}
+            <br>
+            <br>
             <table border=0 width="100%">
                 <tr>
                     {{ if .PrevInSection }}
@@ -187,20 +182,17 @@ window.onload = ready;
                             <tr>
                                 <td> &laquo; </td>
                                 <td>
-                                        
-                                        <a href="{{ .PrevInSection.URL }}">{{ .PrevInSection.Title }}</a>&nbsp;
+                                    <a href="{{ .PrevInSection.URL }}">{{ .PrevInSection.Title }}</a>&nbsp;
                                 </td>
                             </tr>
                         </table>
                     </td>
-                    {{end}}
-                    {{ if .NextInSection }}
+                    {{end}} {{ if .NextInSection }}
                     <td width="50%" style="padding-left: 0.5em; border-left: 1px dotted;">
                         <table>
                             <tr>
                                 <td>
-                                        
-                                        <a href="{{ .NextInSection.URL }}" style="float:right;">{{ .NextInSection.Title }}</a>
+                                    <a href="{{ .NextInSection.URL }}" style="float:right;">{{ .NextInSection.Title }}</a>
                                 </td>
                                 <td> &raquo; </td>
                             </tr>
@@ -211,9 +203,6 @@ window.onload = ready;
             </table>
         </div>
         {{ partial "sidebar.html" . }}
-
     </div>
 </div>
-
-
 {{ partial "footer.html" . }}
