--- a/themes/twotwothree/layouts/partials/middle.html
+++ b/themes/twotwothree/layouts/partials/middle.html
@@ -9,15 +9,7 @@
                         {{ range first 100000 .Pages }}
                         {{ if eq .Type "post"}}
                             <p>
-                            <aside>{{ .Date.Format "January 2, 2006"}} 
-                                <!--{{ if .Params.tags }}
-                                /// <em>{{ range $i, $e := .Params.tags }}{{ if $i }}, {{ end }}<a href="/tags/{{$e}}/">{{ $e }}</a>{{ end }}
-                                    </em>
-                    
-                                {{ end }}-->
-                            </aside>
-                            <a href="/{{ .Slug }}" style="color:black;">{{ .Title }}</a>{{ if .Draft }} <span style="color:#FF4136;">(unpublished)</span>
-                    {{ end }}
+                    {{ .Date.Format "January 2, 2006"}} - <a href="/{{ .Slug }}" style="color:black;">{{ .Title }}</a>{{ if .Draft }} <span style="color:#FF4136;">(unpublished)</span>{{ end }}
                             </p>
                         {{ end }}
                         {{ end }}
