--- a/themes/twotwothree/layouts/partials/header.html
+++ b/themes/twotwothree/layouts/partials/header.html
@@ -1,50 +1,65 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-	<meta charset="utf-8">
-	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<!-- COMMON TAGS -->
-	<title>{{ .Site.Title }}{{if eq (.Title) (.Site.Title)}}{{else}} | {{.Title}}{{end}}</title>
-	<!-- Search Engine -->
-	<meta name="description" content="{{ .Description }}">
-	<meta name="image" content="{{ $.Param "image" }}">
-	<!-- Schema.org for Google -->
-	<meta itemprop="name" content="{{ .Title }}">
-	<meta itemprop="description" content="{{ .Description }}">
-	<meta itemprop="image" content="{{ $.Param "image" }}">
-	<!-- Twitter -->
-	<meta name="twitter:card" content="summary">
-	<meta name="twitter:title" content="{{ .Title }}">
-	<meta name="twitter:description" content="{{ .Description }}">
-	<meta name="twitter:site" content="@{{ $.Site.Params.twitter }}">
-	<meta name="twitter:creator" content="@{{ $.Site.Params.twitter }}">
-	<meta name="twitter:image:src" content="{{ $.Param "image" }}">
-	<!-- Twitter - Article -->
-	<!-- Open Graph general (Facebook, Pinterest & Google+) -->
-	<meta name="og:title" content="{{ .Title }}">
-	<meta name="og:description" content="{{ .Description }}">
-	{{ if $.Param "image" }}<meta name="og:image" content="{{ .Site.BaseURL}}{{ $.Param "image" }}">{{ end }}
-	<meta name="og:url" content="{{ .Permalink }}">
-	<meta name="og:site_name" content="{{ .Title }}">
-	<meta name="og:type" content="article">
-	<!-- Open Graph - Article -->
-	<meta name="article:author" content="{{ $.Site.Params.twitter }}">
-	<meta name="article:tag" content="{{ range .Params.tags }}{{.}} {{end}}">
-	<link rel="stylesheet" type="text/css" href="/css/style{{ $.Site.Params.style }}.css">
-	<script src="/js/caption.js"></script>
-	<link rel="icon" type="image/png" href="/img/favicon/favicon-32x32.png" sizes="32x32" />
-<link rel="icon" type="image/png" href="/img/favicon/favicon-16x16.png" sizes="16x16" />
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <!-- COMMON TAGS -->
+    <title>{{ .Site.Title }}{{if eq (.Title) (.Site.Title)}}{{else}} | {{.Title}}{{end}}</title>
+    <!-- Search Engine -->
+    <meta name="description" content="{{ .Description }}">
+    <meta name="image" content="{{ $.Param " image " }}">
+    <!-- Schema.org for Google -->
+    <meta itemprop="name" content="{{ .Title }}">
+    <meta itemprop="description" content="{{ .Description }}">
+    <meta itemprop="image" content="{{ $.Param " image " }}">
+    <!-- Twitter -->
+    <meta name="twitter:card" content="summary">
+    <meta name="twitter:title" content="{{ .Title }}">
+    <meta name="twitter:description" content="{{ .Description }}">
+    <meta name="twitter:site" content="@{{ $.Site.Params.twitter }}">
+    <meta name="twitter:creator" content="@{{ $.Site.Params.twitter }}">
+    <meta name="twitter:image:src" content="{{ $.Param " image " }}">
+    <!-- Twitter - Article -->
+    <!-- Open Graph general (Facebook, Pinterest & Google+) -->
+    <meta name="og:title" content="{{ .Title }}">
+    <meta name="og:description" content="{{ .Description }}"> {{ if $.Param "image" }}
+    <meta name="og:image" content="{{ .Site.BaseURL}}{{ $.Param " image " }}">{{ end }}
+    <meta name="og:url" content="{{ .Permalink }}">
+    <meta name="og:site_name" content="{{ .Title }}">
+    <meta name="og:type" content="article">
+    <!-- Open Graph - Article -->
+    <meta name="article:author" content="{{ $.Site.Params.twitter }}">
+    <meta name="article:tag" content="{{ range .Params.tags }}{{.}} {{end}}">
+    <link rel="stylesheet" type="text/css" href="/css/style{{ $.Site.Params.style }}.css">
+    <script src="/js/caption.js"></script>
+    <link rel="icon" type="image/png" href="/img/favicon/favicon-32x32.png" sizes="32x32" />
+    <link rel="icon" type="image/png" href="/img/favicon/favicon-16x16.png" sizes="16x16" /> {{ if .Site.Params.quoteServer}}
+    <script>
+    function getJSON(url) { //quick and dirty
+        var script = document.createElement('script');
+        script.setAttribute('src', url);
+        script.setAttribute('type', 'text/javascript');
+        document.getElementsByTagName('head')[0].appendChild(script);
+    }
 
+    function cbfunc(data1) {
+        console.log(data1);
+        var quoteP = document.getElementById("quoteP");
+        quoteP.innerHTML = "<em>“" + data1.text + "” - " + data1.name + "</em>";
+    }
+    getJSON("{{.Site.Params.quoteServer}}?callback=cbfunc")
+    </script>
+    {{end }}
 </head>
-<body>
-{{ if $.Site.Params.analytics }}
-<img src="https://analytics.schollz.com/1.png?page={{ .Permalink }}" width=1px height=1px style="float:right;">
-{{ end }}
 
-<div id="header">
+<body>
+    {{ if $.Site.Params.analytics }}
+    <img src="https://analytics.schollz.com/1.png?page={{ .Permalink }}" width=1px height=1px style="float:right;"> {{ end }}
+    <div id="header">
         <div class="left">
-			<!-- <a href="/">Zack&#39;s Notablog</a> -->
-         </div>
+            <!-- <a href="/">Zack&#39;s Notablog</a> -->
+        </div>
         <div class="right">
             <!-- <a href="/index.xml" style="color:#777;float: left;">
                 <strong>
