disable the caption loading screen

--- a/themes/twotwothree/layouts/_default/single.html
+++ b/themes/twotwothree/layouts/_default/single.html
@@ -1,53 +1,20 @@
 {{ partial "header.html" . }}
-<div id="loadingMask" style="width: 100%; height: 100%; position: fixed; background: #fff;"></div>
 <script>
-function fadeOut(el) {
-    el.style.opacity = 1;
-    var last = +new Date();
-    var tick = function() {
-        el.style.opacity = +el.style.opacity - (new Date() - last) / 80;
-        last = +new Date();
-        // console.log(el.style.opacity);
-        if (el.style.opacity > 0) {
-            (window.requestAnimationFrame && requestAnimationFrame(tick)) || setTimeout(tick, 16);
-        } else {
-            el.style.display = 'none';
-        }
-    };
-    tick();
-}
-
-function ready(fn) {
-    if (document.attachEvent ? document.readyState === "complete" : document.readyState !== "loading") {
-        el = document.getElementById('loadingMask');
-        fadeOut(el);
-        var elements = document.querySelectorAll("img");
-        Array.prototype.forEach.call(elements, function(el, i) {
-            if (el.getAttribute("alt")) {
-                const caption = document.createElement('figcaption');
-                var node = document.createTextNode(el.getAttribute("alt"));
-                caption.appendChild(node);
-                const wrapper = document.createElement('figure');
-                wrapper.className = 'image';
-                el.parentNode.insertBefore(wrapper, el);
-                el.parentNode.removeChild(el);
-                wrapper.appendChild(el);
-                wrapper.appendChild(caption);
-            }
-        });
-    } else {
-        document.addEventListener('DOMContentLoaded', fn);
+// captioning
+var elements = document.querySelectorAll("img");
+Array.prototype.forEach.call(elements, function(el, i) {
+    if (el.getAttribute("alt")) {
+        const caption = document.createElement('figcaption');
+        var node = document.createTextNode(el.getAttribute("alt"));
+        caption.appendChild(node);
+        const wrapper = document.createElement('figure');
+        wrapper.className = 'image';
+        el.parentNode.insertBefore(wrapper, el);
+        el.parentNode.removeChild(el);
+        wrapper.appendChild(el);
+        wrapper.appendChild(caption);
     }
-
-    guestbook.innerHTML = "Loading ...";
-    var tag = document.createElement("script");
-    var message = encodeURIComponent(document.querySelector('#message').value);
-    var name = encodeURIComponent(document.querySelector('#name').value);
-    var email = encodeURIComponent(document.querySelector('#email').value);
-    tag.src = `${serverURL}/jsonp?callback=myCallback&message=${message}&name=${name}&email=${name}`;
-    document.querySelector("head").appendChild(tag);
-}
-document.onreadystatechange = ready;
+});
 </script>
 <div id="documentbody">
     <div class="wtblog">
@@ -152,6 +119,14 @@ document.onreadystatechange = ready;
                         document.querySelector("head").appendChild(tag);
                     }
                     btn.addEventListener("click", jsonp);
+
+                    guestbook.innerHTML = "Loading ...";
+                    var tag = document.createElement("script");
+                    var message = encodeURIComponent(document.querySelector('#message').value);
+                    var name = encodeURIComponent(document.querySelector('#name').value);
+                    var email = encodeURIComponent(document.querySelector('#email').value);
+                    tag.src = `${serverURL}/jsonp?callback=myCallback&message=${message}&name=${name}&email=${name}`;
+                    document.querySelector("head").appendChild(tag);
                     </script>
                 </div>
                 <br>
