--- a/themes/twotwothree/static/css/style4.css
+++ b/themes/twotwothree/static/css/style4.css
@@ -185,6 +185,8 @@ figcaption {
 figure {
 	margin:0;
     display: block;
+    padding-top: 1.5em;
+    padding-bottom: 1.5em;
     /* border: 0.5px solid #303030; */
 }
 
@@ -301,3 +303,5 @@ table th {
 	padding: 0.3rem 0.5rem 0.3rem 0.5rem;
 	line-height: 1.05;
 }
+
+
